# aizo_projekt2

./: CMakeLists.txt
data/: config.txt  graph.txt
include/: AlgorithmsRunner.h  Application.h  BellmanFord.h  Config.h  Dijkstra.h  Graph.h  GraphGenerator.h  Kruskal.h  ListGraph.h  MatrixGraph.h  MinHeap.h  Prim.h  Timer.h
src/: AlgorithmsRunner.cpp  Application.cpp  BellmanFord.cpp  Config.cpp  Dijkstra.cpp  Graph.cpp  GraphGenerator.cpp  Kruskal.cpp  ListGraph.cpp  MatrixGraph.cpp  MinHeap.cpp  Prim.cpp  Timer.cpp  main.cpp
